--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
 
 </head>
 <body>
-    
+    <div id="app">
+        <main>
+            <div class="main-container">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat, nostrum id cum similique, at aliquid, tempora incidunt eligendi aliquam quasi consectetur! Cumque dignissimos aut eligendi voluptas odio officiis veritatis? Natus.</div>
+        </main>
+
+        <aside>
+            <div class="aside-container">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo dolores rem dicta deserunt! Aliquam, soluta nobis excepturi quod eaque eligendi eum animi? Placeat, minus. Recusandae impedit sed tempore corporis? Distinctio.</div>
+        </aside>
+
+    </div>
+
 </body>
 </html>
