--- a/index.html
+++ b/index.html
@@ -3,24 +3,40 @@
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Escola Maternal Arca de Noé - EMAN</title>
-    <link rel="stylesheet" href="styles.css/index.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <title>Estrelas do amanahã</title>
 
+    <link rel="stylesheet" href="styles.css/index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Alice&family=Archivo:ital,wght@0,100..900;1,100..900&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="app">
         <main>
-            <div class="main-container">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat, nostrum id cum similique, at aliquid, tempora incidunt eligendi aliquam quasi consectetur! Cumque dignissimos aut eligendi voluptas odio officiis veritatis? Natus.</div>
+            <div class="main-container">
+                <div class="back">
+                    <img src="assets/icons/arrow-left-02.svg" alt="Icone de seta para voltar">
+                    <span>voltar</span>
+                </div>
+
+            <h1>Formulário de matrícula</h1>
+            <p>Preencha os dados abaixo para matricular seu filho na escola de educação infantil Estrelas do Amanhã.</p>
+            </div>
         </main>
 
         <aside>
-            <div class="aside-container">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo dolores rem dicta deserunt! Aliquam, soluta nobis excepturi quod eaque eligendi eum animi? Placeat, minus. Recusandae impedit sed tempore corporis? Distinctio.</div>
+            <div class="aside-container">
+                <header>
+                    <img src="assets/logo.svg" alt="Logo estrelas do amanhã">
+                    <h2>Porque cada momento de
+                        <span>aprendizado </span>conta</h2>
+                    <p>Inscreva seu filho em nossa escola e veja-o florescer em um ambiente acolhedor, seguro e estimulante.</p>
+                </header>
+
+                <img src="assets/Ilustrações.svg" alt="ilustração de professora ensinando as crianças">
+            </div>
         </aside>
-
     </div>
-
 </body>
 </html>
