--- a/index.html
+++ b/index.html
@@ -217,8 +217,14 @@
                     </div>
                 </div>
             </fieldset>
-        </main>
 
+            <div class="terms-wrapper input-wrapper checkbox-wrapper"></div>
+            <div class="checkbox-image"></div>
+            <input type="checkbox" name="terms" id="terms">
+            <label for="terms">
+                Declaro que li e concordo com os <strong> Termos e Condições</strong> e com a <strong>Política de Privacidade</strong> da escola Estrela do Amanhã. 
+            </label>
+        </main>
         <aside>
             <div class="aside-container">
                 <header>
