--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <div class="flex">
                         <div class="input-wrapper flex-2">
                             <label for="city">Cidade</label>
-                            <input type="text"id="cty" name="cty"
+                            <input type="text"id="city" name="city"
                             value="Rio de Janeiro" disabled
                             >
 
@@ -144,7 +144,9 @@
                             </div>
                         </div>
                     </div>
+                </form>
                 </fieldset>
+                
                 
                 <fieldset class="enroll-options">
                 <legend>Opções de matrícula</legend>
@@ -215,16 +217,22 @@
                             </div>
                         </div>
                     </div>
-                </div>
-            </fieldset>
+               </fieldset>
 
-            <div class="terms-wrapper input-wrapper checkbox-wrapper"></div>
-            <div class="checkbox-image"></div>
-            <input type="checkbox" name="terms" id="terms">
-            <label for="terms">
-                Declaro que li e concordo com os <strong> Termos e Condições</strong> e com a <strong>Política de Privacidade</strong> da escola Estrela do Amanhã. 
-            </label>
+               <div class="terms-wrapper input-wrapper checkbox-wrapper">
+                <div class="checkbox-image"></div>
+                <input type="checkbox" name="terms" id="terms">
+
+                <label for="terms">
+                    Declaro que li e concordo com os <strong>Termos e Condições</strong> e com a
+                    <strong>Política de Privacidade</strong> da escola Estrela do Amanhã.
+                </label>
+            </div>
+            </form>
+            </div>
         </main>
+
+
         <aside>
             <div class="aside-container">
                 <header>
@@ -239,4 +247,4 @@
         </aside>
     </div>
 </body>
-</htp
+</html>
